[package]
name = "lolrunes"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0.12.3"