[package]
name = "lolrunes"
version = "0.1.0"
authors = ["Nicolas Mohr <Nico.Mohr@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
base64 = "0.12.3"
iced = { version = "0.1.0", features = ["tokio"] }
iced_native = "0.2.0"
nfd2 = "0.2.1"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"